# TradeChest

./: FPGA_integration_research.md  README.md  TradeChest.sln  build.sh
fpga-integration/: mod.rs
gui-csharp/: Dashboard.cs  Program.cs  RustCore.cs  appsettings.json  libtradechest_core.dylib
rust-core/: Cargo.toml  build.rs
rust-core/benches/: trading_bench.rs
rust-core/src/: fixed_point.rs  fpga_bridge.rs  hjb.rs  lib.rs  market_data.rs  metrics.rs  order_engine.rs
